src/objects/HR_Contact_Interview__c.object
<CustomObject>
    <fields>
        <fullName>HR_Contact_Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>HR Contact Job</label>
        <referenceTo>HR_Contact_Job__c</referenceTo>
        <relationshipLabel>HR Contact Interviews</relationshipLabel>
        <relationshipName>HR_Contact_Interviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interviewer_Assessment__c</fullName>
        <label>Interviewer Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interviewer_Notes__c</fullName>
        <label>Interviewer Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interviewing_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewing Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HR_Interviewing_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HR Contact Interview</label>
    <nameField>
        <label>HR  Contact Interview</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Contact Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>